# oxidebook

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: core.rs  main.rs  order_book.rs  outbox.rs  protocol.rs  rest_api.rs  transport.rs  ws_md_api.rs
src/core/: mod.rs
src/order_book/: mod.rs  tests.rs
