[package]
name = "oxidebook"
version = "0.1.0"
authors = ["Sergey Levitin <selevit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbtree = "0.1.5"
lapin = "*"
futures-executor = "*"
futures-util = "*"
futures = "*"
env_logger = "*"
log = "*"
warp = "*"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
uuid = { version = "0.8", features = ["v4"] }
