[package]
name = "oxidebook"
version = "0.1.0"
authors = ["Sergey Levitin <selevit@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbtree = "0.1"
lapin = "0.33"
futures-executor = "0.3"
futures-util = "0.3"
futures = "0.3"
env_logger = "0.8.3"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
amq-protocol-types = "5.1"
log = "0.4"
warp = "0.3.1"
deadpool-lapin = "0.5"
tokio = { version = "1.4.0", features = ["macros", "net", "io-util", "sync", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
enum_dispatch = "0.3"
thiserror = "1.0"
anyhow = "1.0"
futures-channel = "0.3.14"
tungstenite = "0.13.0"
tokio-tungstenite = "0.14.0"
